tests/machine/x/cobol/pure_fold.error
/tmp/TestCobolCompiler_VMValid_Goldenpure_fold3487891383/001/prog.cob:11: error: syntax error, unexpected USING
/tmp/TestCobolCompiler_VMValid_Goldenpure_fold3487891383/001/prog.cob: in paragraph 'FN_TRIPLE':
/tmp/TestCobolCompiler_VMValid_Goldenpure_fold3487891383/001/prog.cob:16: error: syntax error, unexpected PROCEDURE
/tmp/TestCobolCompiler_VMValid_Goldenpure_fold3487891383/001/prog.cob:17: error: 'X' cannot be used here
