tests/machine/x/cobol/pure_fold.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. PURE-FOLD.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-TRIPLE-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE TMP = 1 + 2
       PERFORM FN_TRIPLE USING TMP
       DISPLAY FN-TRIPLE-RES
       STOP RUN.
       
       FN_TRIPLE.
           PROCEDURE DIVISION USING X.
               COMPUTE FN-TRIPLE-RES = X * 3
               EXIT.
